--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,15 @@
     <application android:icon="@drawable/app_notes"
         android:label="@string/app_name"
     >
+        <!-- 注册广播接收器 -->
+        <receiver
+            android:name=".NotificationReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.example.android.notepad.REMINDER" />
+            </intent-filter>
+        </receiver>
         <provider android:name="NotePadProvider"
             android:authorities="com.google.provider.NotePad"
             android:exported="true">
